--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
             const geminiResultContainer = document.getElementById('gemini-result-container');
             const presetButtons = document.querySelectorAll('.gemini-preset-prompt');
 
-            const apiKey = ""; 
+            const apiKey = "AIzaSyCSM3AvNkVQRJBBhmBBZLVDGh7oa6x1Fm4"; 
             const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent?key=${apiKey}`;
 
             async function fetchWithRetry(url, options, retries = 5, delay = 1000) {
@@ -543,4 +543,5 @@
     </script>
 </body>
 </html>
+
 
